# programming-and-problem-solving

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: PRD.md  styleguide-ipynb.md  styleguide.md  task-list.md
notebooks/: 01-getting-started.ipynb  02-04.review-notebook.ipynb  02-first-steps-with-python.ipynb  03-basic-calculations.extended-practice.ipynb  03-basic-calculations.ipynb  03-shapes-and-calculations.ipynb  04-decisions-and-lists.ipynb  04-interactive-programs.ipynb  05-07.review-notebook.ipynb  05-reusable-code-with-functions.audio-prompt  05-reusable-code-with-functions.ipynb  05-the-caesar-cipher.ipynb  06-decisions-and-lists.ipynb  06-decisions.ipynb  06-prime-numbers.ipynb  07-lists.ipynb  07-the-caesar-cipher.ipynb  08-for-loops.audio-prompt  08-for-loops.ipynb  09-prime-numbers.ipynb  09-the-game-loop.audio-prompt  09-the-game-loop.ipynb  10-dictionaries.ipynb  10-the-caesar-cipher.ipynb  11-prime-numbers.ipynb  11.a-introduction-to-secret-messages.ipynb  11.a-the-caesar-cipher.ipynb  11.b-breaking-the-code.ipynb  11.b-the-caesar-cipher.ipynb  11.c-the-key-exchange-problem.ipynb  11.d-practice-with-factoring.ipynb  12.a-functions-sequences-and-plots.ipynb  12.b-finding-linear-patterns.ipynb  12.c-cracking-the-quadratic-code.ipynb  12.d-the-method-of-differences.ipynb  12.e-a-glimpse-of-calculus.ipynb  table-of-contents.ipynb
src/programming_and_problem_solving.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
